CNV-58912: fix aligning VM list table

--- a/src/views/virtualmachines/list/VirtualMachinesList.scss
+++ b/src/views/virtualmachines/list/VirtualMachinesList.scss
@@ -4,9 +4,9 @@
   }
 }
 
-.vm-listpagebody .pf-v5-c-table {
+.vm-listpagebody .pf-v6-c-table {
   .selection-column {
-    --pf-v5-c-table--cell--Width: 5%;
+    --pf-v6-c-table--cell--Width: 5%;
   }
 }
 
